Fix alignement issue

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -571,26 +571,26 @@ table.search-history-table {
 
 .searchForm-query {
   position: relative;
-  display: inline-flex;
-  align-items: center;
+  display: inline-block;
 
-  .searchForm_lookfor {
-    padding-right: 18px;
-    box-sizing: border-box;
+  #searchForm_lookfor {
+    padding-right: 28px;
   }
 
   #searchForm-reset {
     position: absolute;
     display: none;
     right: 3px;
+    top: 3px;
+    bottom: 0;
     width: 2em;
     height: 2em;
     border: none;
     border-radius: 50%;
     background-color: @gray-lighter;
+    margin: 0;
+    padding: 2px;
     font-size: 1em;
-    text-align: center;
-    line-height: 1em;
     cursor: pointer;
   }
 }
